# deepscaler

./: .gitignore  Makefile  README.md  inventory.ini  pyproject.toml  rllm-8k-coding.sh  rllm-8k-math.sh  setup.py  setup.yml
debug_traces/: debug_trace_20250427_212734_0945.json  debug_trace_20250427_212734_4296.json  debug_trace_20250427_212734_5306.json  debug_trace_20250427_212735_4275.json  debug_trace_20250427_212736_5010.json  debug_trace_20250427_215128_3318.json  debug_trace_20250427_215134_3473.json  debug_trace_20250427_215152_3960.json  debug_trace_20250427_215158_3632.json  debug_trace_20250427_215202_3843.json  debug_trace_20250427_215203_9041.json  debug_trace_20250427_215206_6042.json
debug_traces_bs8/: debug_trace_20250427_224930_0376.json  debug_trace_20250427_224930_2604.json  debug_trace_20250427_224930_5447.json  debug_trace_20250427_224930_5689.json  debug_trace_20250427_224930_8607.json  debug_trace_20250427_224932_8708.json  debug_trace_20250427_224933_7361.json  debug_trace_20250427_225307_0663.json  debug_trace_20250427_225307_4242.json  debug_trace_20250427_225307_6311.json  debug_trace_20250427_225307_7961.json  debug_trace_20250427_225308_3578.json  debug_trace_20250427_225308_5866.json  debug_trace_20250427_225308_9558.json  debug_trace_20250427_225316_5866.json  debug_trace_20250427_225316_7808.json  debug_trace_20250427_225325_6311.json  debug_trace_20250427_225325_6634.json  debug_trace_20250427_225325_6890.json  debug_trace_20250427_225325_8376.json
debug_traces_excluding_199/: debug_trace_20250428_012908_1091.json  debug_trace_20250428_012908_1838.json  debug_trace_20250428_012908_2155.json  debug_trace_20250428_012908_2754.json  debug_trace_20250428_012908_3236.json  debug_trace_20250428_012908_3533.json  debug_trace_20250428_012908_4519.json  debug_trace_20250428_012908_4765.json  debug_trace_20250428_012908_7526.json  debug_trace_20250428_012908_7527.json  debug_trace_20250428_012908_7537.json  debug_trace_20250428_012908_8448.json  debug_trace_20250428_012909_6530.json  debug_trace_20250428_012909_6720.json  debug_trace_20250428_012910_5355.json  debug_trace_20250428_012910_7318.json  debug_trace_20250428_012911_1705.json  debug_trace_20250428_012911_8409.json  debug_trace_20250428_012912_0360.json  debug_trace_20250428_012912_0535.json  debug_trace_20250428_012912_7551.json  debug_trace_20250428_012912_9915.json  debug_trace_20250428_012913_0260.json  debug_trace_20250428_012913_8934.json  debug_trace_20250428_012914_4055.json  debug_trace_20250428_012914_4738.json  debug_trace_20250428_014433_4242.json  debug_trace_20250428_014433_4969.json  debug_trace_20250428_014433_6311.json  debug_trace_20250428_014433_6634.json  debug_trace_20250428_014433_6890.json  debug_trace_20250428_014433_7961.json  debug_trace_20250428_014433_8376.json  debug_trace_20250428_014439_3578.json  debug_trace_20250428_014439_5866.json  debug_trace_20250428_014440_2289.json  debug_trace_20250428_014440_3578.json  debug_trace_20250428_014440_4617.json  debug_trace_20250428_014440_8268.json  debug_trace_20250428_014444_1553.json  (+603 more)
debug_traces_fn_dup/: debug_trace_20250427_231016_2286.json  debug_trace_20250427_231016_2884.json  debug_trace_20250427_231016_3010.json  debug_trace_20250427_231016_4477.json  debug_trace_20250427_231016_5651.json  debug_trace_20250427_231016_5674.json  debug_trace_20250427_231016_6863.json  debug_trace_20250427_231016_8747.json  debug_trace_20250427_231016_9203.json  debug_trace_20250427_231017_0672.json  debug_trace_20250427_231017_3468.json  debug_trace_20250427_231017_6100.json  debug_trace_20250427_231018_2379.json  debug_trace_20250427_231018_2435.json  debug_trace_20250427_231019_0263.json  debug_trace_20250427_231020_9704.json  debug_trace_20250427_231021_5049.json  debug_trace_20250427_231021_5765.json  debug_trace_20250427_231021_9481.json  debug_trace_20250427_231022_8057.json  debug_trace_20250427_231022_9249.json
deepscaler/: globals.py  system_prompts.py  utils.py
deepscaler/data/: __init__.py  dataset_types.py  utils.py
deepscaler/rewards/: __init__.py  math_reward.py  reward_types.py
ray_output/: session_latest
ray_output/session_2025-04-27_06-35-42_936137_1141080/: ports_by_node.json
ray_output/session_2025-04-27_07-29-26_499137_1173960/: node_ip_address.json  ports_by_node.json
ray_output/session_2025-04-27_07-47-16_299291_1192675/: ports_by_node.json
ray_output/session_2025-04-27_16-13-34_053375_11394/: ports_by_node.json
ray_output/session_2025-04-27_17-43-29_033689_41976/: ports_by_node.json
ray_output/session_2025-04-27_19-00-02_521288_76445/: ports_by_node.json
ray_output/session_2025-04-27_19-42-23_343390_97061/: ports_by_node.json
ray_output/session_2025-04-27_19-57-10_574620_116245/: ports_by_node.json
ray_output/session_2025-04-27_20-02-43_062700_133967/: ports_by_node.json
ray_output/session_2025-04-27_20-20-00_736531_152904/: ports_by_node.json
ray_output/session_2025-04-27_21-01-19_747191_172001/: ports_by_node.json
ray_output/session_2025-04-27_21-18-07_621979_193566/: ports_by_node.json
ray_output/session_2025-04-27_22-40-09_091365_222291/: ports_by_node.json
ray_output/session_2025-04-27_23-00-56_733615_242964/: ports_by_node.json
ray_output/session_2025-04-28_01-15-32_225462_284518/: ports_by_node.json
ray_output/session_2025-04-28_01-19-43_907750_302219/: node_ip_address.json  ports_by_node.json
rllm/rewards/: code_reward.py  (+1 more)
verl/: pyproject.toml  setup.py
(+127 files in other folders)
