[project]
name = "rllm"
version = "0.0.0"
description = "Distributed Post-Training RL Library for LLMs"
authors = [{ name = "Agentica Team", email = "agenticaproject@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'torch==2.4.0',
    'torchaudio',
    'torchvision',
    'hydra-core==1.3.2',
    'deepspeed',
    'dm-tree',
    'gdown',
    'google-cloud-aiplatform',
    'latex2sympy2',
    'pybind11',
    'pylatexenc',
    'pytest',
    'sentence_transformers',
    'sortedcontainers',
    'tabulate',
    'torchmetrics',
    'gym',
    'selenium',
    'PyMuPDF',
    'nltk',
    'browsergym',
    'gradio',
    'fire',
    'vertexai',
    'e2b_code_interpreter',
    'firecrawl',
    'wandb',
]

[dependency-groups]
verl-sync = ["verl"]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
default-groups = ["verl-sync"]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
verl = { path = "verl", editable = true }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
