[project]
name = "rllm"
version = "0.0.0"
description = "Distributed Post-Training RL Library for LLMs"
authors = [{ name = "Agentica Team", email = "agenticaproject@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'torch',
    'torchaudio',
    'torchvision',
    'hydra-core==1.3.2',
    'deepspeed',
    'dm-tree',
    'gdown',
    'google-cloud-aiplatform',
    'latex2sympy2',
    'pybind11',
    'pylatexenc',
    'pytest',
    'sentence_transformers',
    'sortedcontainers',
    'tabulate',
    'torchmetrics',
    'gym',
    'selenium',
    'PyMuPDF',
    'nltk',
    'browsergym',
    'gradio',
    'fire',
    'vertexai',
    'e2b_code_interpreter',
    'firecrawl',
    'wandb',
    "verl[gpu,prime]",
    'datasets==3.5.0',
]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
verl = { path = "../verl-pipeline", editable = true }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name = "torch"
version = "2.5.1"
# from https://pypi.org/pypi/torch/2.5.1/json but with updated nvidia-nccl-cu12
requires-dist = [
      "filelock",
      "typing-extensions>=4.8.0",
      "networkx",
      "jinja2",
      "fsspec",
      "nvidia-cuda-nvrtc-cu12==12.4.127; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cuda-runtime-cu12==12.4.127; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cuda-cupti-cu12==12.4.127; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cudnn-cu12==9.1.0.70; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cublas-cu12==12.4.5.8; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cufft-cu12==11.2.1.3; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-curand-cu12==10.3.5.147; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cusolver-cu12==11.6.1.9; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-cusparse-cu12==12.3.1.170; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-nccl-cu12==2.26.2.post1 ; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-nvtx-cu12==12.4.127; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "nvidia-nvjitlink-cu12==12.4.127; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
      "triton==3.1.0; platform_system == \"Linux\" and platform_machine == \"x86_64\" and python_version < \"3.13\"",
      "sympy==1.12.1; python_version == \"3.8\"",
      "setuptools; python_version >= \"3.12\"",
      "sympy==1.13.1; python_version >= \"3.9\"",
      "opt-einsum>=3.3; extra == \"opt-einsum\"",
      "optree>=0.12.0; extra == \"optree\""
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
